# slideforge-rust

./: .gitignore  AGENTS.md  AUDIT-REPORT.md  Cargo.toml  DESIGN-GUIDE.md  README.md  SKILL.md  audit_slides.json  audit_tokens.json  blog_design_tokens.json  blog_slides.json  design_tokens.json  gender_studies_slides.json  generate_audit_slides.py  generate_blog_slide.py  generate_full_scope_test.py  generate_gender_studies_carousel.py  generate_habits_carousel.py  generate_preset_slides.py  habits_slides.json  plan.md  test_full_scope_rust.py  test_plan_issues.py  test_plan_slides.json  test_plan_tokens.json  test_tokens.json  workspace-lint.yaml
.hive/: sessions.json
.memsearch/: .capture.pid  .last_msg_time
.memsearch/memory/: 2026-07-02.md  2026-07-03.md
_kernel/: intent.md  ledger.md
docs/presets/: campaign-presets.json
graphify-out/: graph.json
scripts/: install-slideforge-rust.sh  workspace_lint.py
skill/slideforge/: SKILL.md
skills/slideforge/: SKILL.md  _map.md  _registry.yaml
src/: archetypes.rs  blocks.rs  components.rs  dataviz.rs  design_system.rs  effects.rs  export.rs  layouts.rs  main.rs  mcp_server.rs  platforms.rs  slide_registry.rs  slides.rs  validate.rs
test-drafts/full-scope-test-output-rust/: carousel_10_brand_storyteller.html  carousel_11_data_analyst.html  carousel_12_creator.html  carousel_13_educator.html  carousel_14_thought_leader.html  carousel_15_startup_pitch.html  carousel_16_brand_storyteller.html  carousel_17_data_analyst.html  carousel_18_creator.html  carousel_19_educator.html  carousel_1_educator.html  (+108 more)
(+35 files in other folders)
