[package]
name = "slideforge-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
headless_chrome = "1.0.22"
indexmap = { version = "2.0", features = ["serde"] }
palette = "0.7.6"
regex = "1.12"
resvg = "0.47.0"
rmcp = { version = "1.8.0", features = ["server", "macros"] }
schemars = { version = "1.2.1", features = ["indexmap2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tiny-skia = "0.12.0"
tokio = { version = "1.52.3", features = ["full"] }
rand = "0.8"
uuid = { version = "1.17", features = ["v4"] }
